<resources>
    <string name="app_name">Connect+</string>

    <!-- login strings -->
    <string name="login_description">Авторизуйтесь, используя\nсоциальную сеть</string>
    <string name="login_agreement">Авторизуясь, вы соглашаетесь на\nобработку персональных данных</string>
    <string name="facebook">Facebook</string>
    <string name="vkontakte">vk</string>
    <string name="recommendations_search">Ищем коннекты вокруг вас</string>
    <string name="goals_title">Что ищет</string>
    <string name="skills_title">Чем полезна</string>
    <string name="btn_write">Написать сообщение</string>
    <string name="connect_invite">предложила вам connect</string>
    <string name="title_profile_skills">Чем вы полезны</string>
    <string name="hint">Введите текст</string>
    <string name="title_profile_goals">Что вы ищите</string>
    <string name="title_profile_aims">Цели</string>
    <string name="label_add">Добавить</string>
    <string name="aims_description">Цели, которых вы планируете достигнуть.</string>
    <string name="title_profile_spheres">Сферы</string>
    <string name="spheres_description">Сферы, в которых вы являетесь профессионалом.</string>
    <string name="enter_chat">Войти в чат</string>
    <string name="how_can_she_help">Чем полезна</string>
    <string name="what_is_searching">Что ищет</string>
    <string name="work">Карьера</string>
    <string name="education">Образование</string>
    <string name="title_contacts">Визитница</string>
    <string name="search">Поиск</string>
    <string name="message">Сообщение</string>
    <string name="events">Мероприятия</string>
    <string name="all">все</string>
    <string name="my">мои</string>
    <string name="label_apply">Принять участие</string>
    <string name="label_permission_apply">Открыть доступ</string>
    <string name="label_permission_description">Чтобы начать поиск коннектов,\nпредоставьте нам доступ\nк вашему местоположению</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="enter_tags">Введите тэги через запятую</string>
    <string name="recommendations">Рекомендации</string>
    <string name="chats">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="distance">%.02f км</string>
    <string name="education_name">Название учреждения *</string>
    <string name="education_spec">Специальность *</string>
    <string name="education_start">Год начала обучения *</string>
    <string name="education_end">Год окончания обучения *</string>
    <string name="work_name">Название компании *</string>
    <string name="work_position">Должность *</string>
    <string name="work_start">Год начала работы *</string>
    <string name="work_end">Год окончания работы *</string>
    <string name="hint_tags">Введите тэги через запятую</string>
</resources>
