<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_recommendations"
        android:icon="@drawable/ic_recomendations"
        android:title="@string/recommendations" />
    <item
        android:id="@+id/menu_events"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />
    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/menu_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>